--- a/views/escort.hbs
+++ b/views/escort.hbs
@@ -1,7 +1,6 @@
 <div class="parallax-container">
     <div class="parallax"><img id="imgParallax" style="height: 260px;
-    object-fit: cover;"
-                               src="https://images.pexels.com/photos/2702692/pexels-photo-2702692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
+    object-fit: cover;" src="https://images.pexels.com/photos/2702692/pexels-photo-2702692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
         <!--        https://cdn.pixabay.com/photo/2020/03/27/15/45/the-act-of-4973997_1280.jpg-->
         <!--       https://cdn.pixabay.com/photo/2020/03/25/03/40/nude-4966000_1280.jpg -->
         <!--        https://cdn.pixabay.com/photo/2020/03/18/03/49/nude-4942551_1280.jpg-->
