--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -74,7 +74,7 @@
 </ul>
 <ul id="dropdown12" class="dropdown-content drop">
     {{#if city.length}}
-        <li><a href="/escort/Kiev">Киев</a></li>
+<!--        <li><a href="/escort/Kiev">Киев</a></li>-->
         {{#each city}}
             <li><a href="#!"><h5>{{name}}</h5></a></li>
             <li class="divider"></li>
