--- a/public/style.css
+++ b/public/style.css
@@ -328,3 +328,9 @@ form > .range-field {
         margin-top: 158%;
     }
 }
+@media(max-width: 800px) {
+    .parallax > img{
+        width: 322px;
+        object-fit: cover;
+    }
+}
