--- a/views/city.hbs
+++ b/views/city.hbs
@@ -35,7 +35,7 @@
 
                 <a href="/id/{{id}}">
                     <div class="card-image es">
-                        <img src="{{photo.[0]}}" alt="Escort Ukraine">
+                        <img src="/images/{{photo.[0]}}" alt="Escort Ukraine">
                         <div class="card-title">
                             <span>{{city}}</span><br>
                         <span>{{name}}
