--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -74,13 +74,15 @@
 </ul>
 <ul id="dropdown12" class="dropdown-content drop">
     {{#if city.length}}
-<!--        <li><a href="/escort/Kiev">Киев</a></li>-->
+        <li><a href="/escort/Kiev">Киев</a></li>
         {{#each city}}
-            <li><a href="#!"><h5>{{name}}</h5></a></li>
             <li class="divider"></li>
+            <li><a href="#!"><h5>{{name}}</h5></a></li>
+
             {{#each cities}}
-                <li><a href="/escort/{{nameEn}}">{{name}}</a></li>
                 <li class="divider"></li>
+                <li><a href="/escort/{{nameEn}}">{{name}}</a></li>
+
             {{/each}}
         {{/each}}
     {{else}}
