--- a/views/escort.hbs
+++ b/views/escort.hbs
@@ -34,7 +34,7 @@
 
                 <a href="/id/{{id}}">
                     <div class="card-image es">
-                        <img src="/images/{{photo.[0]}}" alt="Escort Ukraine">
+                        <img src="https://zodaikapp.s3.us-east-2.amazonaws.com/{{photo.[0]}}" alt="Escort Ukraine">
                         <div class="card-title">
                             <span>{{city}}</span><br>
                         <span>{{name}}
