--- a/views/escort.hbs
+++ b/views/escort.hbs
@@ -1,11 +1,5 @@
 <div class="parallax-container">
-    <div class="parallax"><img id="imgParallax" style="height: 260px;
-    object-fit: cover;" src="https://images.pexels.com/photos/2702692/pexels-photo-2702692.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
-        <!--        https://cdn.pixabay.com/photo/2020/03/27/15/45/the-act-of-4973997_1280.jpg-->
-        <!--       https://cdn.pixabay.com/photo/2020/03/25/03/40/nude-4966000_1280.jpg -->
-        <!--        https://cdn.pixabay.com/photo/2020/03/18/03/49/nude-4942551_1280.jpg-->
-        <!--        https://cdn.pixabay.com/photo/2017/12/31/19/45/girls-3053051_1280.jpg-->
-        <!--        https://cdn.pixabay.com/photo/2016/03/15/17/17/girl-1258739_1280.jpg-->
+    <div class="parallax"><img id="imgParallax" src="https://zodaikapp.s3.us-east-2.amazonaws.com/039f86b23af7.jpg">
     </div>
     <h1>ESCORT</h1>
     <div class="fil-btn">
