--- a/views/model.hbs
+++ b/views/model.hbs
@@ -143,7 +143,7 @@
                 </li>
             {{/if}}
             {{#if object.phone.[3]}}
-                <li><a href="https://t.me/{{object.phone.[3]}}" class="btn-floating  light-blue"><i
+                <li><a href="t.me/{{object.phone.[3]}}" class="btn-floating  light-blue"><i
                         class="fab fa-telegram"></i></a>
                 </li>
             {{/if}}
