--- a/views/lk.hbs
+++ b/views/lk.hbs
@@ -61,7 +61,7 @@
 
                     <img class="img--lk es" src="https://zodaikapp.s3.us-east-2.amazonaws.com/{{photo.[0]}}">
                     <span class="card-title title-lk">{{name}}</span>
-                    <span class="card-title status title-lk" data-status="{{id}}?active=" data-act="{{active}}"></span>
+                    <span class="card-title status title-lk" data-status="/active/{{id}}?active=" data-act="{{active}}"></span>
                 </div>
 
 
