--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,17 +1,17 @@
-<ul id="dropdown1" class="dropdown-content drop">
-    {{#if city.length}}
-        {{#each city}}
-            <li><a href="#!"><h5>{{name}}</h5></a></li>
-            <li class="divider"></li>
-            {{#each cities}}
-                <li><a href="/escort/{{nameEn}}">{{name}}</a></li>
-                <li class="divider"></li>
-            {{/each}}
-        {{/each}}
-    {{else}}
-        <p>Пусто</p>
-    {{/if}}
-</ul>
+<!--<ul id="dropdown1" class="dropdown-content drop">-->
+        <!--            {{#if city.length}}-->
+        <!--                {{#each city}}-->
+<!--            <li><a href="#!"><h5>{{name}}</h5></a></li>-->
+<!--            <li class="divider"></li>-->
+        <!--                    {{#each cities}}-->
+<!--                <li><a href="/escort/{{nameEn}}">{{name}}</a></li>-->
+<!--                <li class="divider"></li>-->
+        <!--                    {{/each}}-->
+        <!--                {{/each}}-->
+        <!--            {{else}}-->
+<!--        <p>Пусто</p>-->
+        <!--            {{/if}}-->
+<!--</ul>-->
 <nav>
     <div class="nav-wrapper purple">
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -28,11 +28,11 @@
             {{else}}
                 <li><a href="/login">Авторизация</a></li>
             {{/if}}
-            <!-- Dropdown Trigger -->
-            {{#if city.length}}
-                <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Города<i class="material-icons right">arrow_drop_down</i></a>
-                </li>
-            {{/if}}
+            <!--            &lt;!&ndash; Dropdown Trigger &ndash;&gt;-->
+                <!--            {{#if city.length}}-->
+            <!--                <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Города<i class="material-icons right">arrow_drop_down</i></a>-->
+            <!--                </li>-->
+                <!--            {{/if}}-->
         </ul>
     </div>
 </nav>
@@ -67,25 +67,58 @@
     {{else}}
         <li><a href="/login">Авторизация</a></li>
     {{/if}}
-    {{#if city.length}}
-    <li><a class="dropdown-trigger" href="#!" data-target="dropdown12">Города<i class="material-icons right">arrow_drop_down</i></a>
-    {{/if}}
-</li>
-</ul>
-<ul id="dropdown12" class="dropdown-content drop">
-    {{#if city.length}}
-        <li><a href="/escort/Kiev">Киев</a></li>
+    <div id="label--drop-down"><strong>Выбрать город</strong></div>
+    <div id="drop--down" class="status">
         {{#each city}}
-            <li class="divider"></li>
-            <li><a href="#!"><h5>{{name}}</h5></a></li>
-
+            <li><a class="href--city" href="/escort/Kiev">Киев</a></li>
+            <h6 class="city-region">{{name}}</h6>
             {{#each cities}}
-                <li class="divider"></li>
-                <li><a href="/escort/{{nameEn}}">{{name}}</a></li>
-
+                <li><a class="href--city" href="/escort/{{nameEn}}">{{name}}</a></li>
             {{/each}}
         {{/each}}
-    {{else}}
-        <p>Пусто</p>
-    {{/if}}
+    </div>
+        <!--    {{#if city.length}}-->
+    <!--    <li><a class="dropdown-trigger" href="#!" data-target="dropdown12">Города<i class="material-icons right">arrow_drop_down</i></a></li>-->
+        <!--    {{/if}}-->
 </ul>
+<style>
+    .status {
+        display: none;
+    }
+
+    #drop--down {
+        position: absolute;
+        top: 0;
+        background: white;
+        width: 100%;
+        height: 477px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+    #drop--down::-webkit-scrollbar{
+        display: none;
+    }
+   .city-region{
+       margin-left: 10px;
+   }
+    #label--drop-down {
+        width: 100%;
+        left: 32px;
+        top: 12px;
+        position: relative;
+    }
+     #drop--down:nth-child(0){
+         margin-top: 20px;
+     }
+    .href--city {
+        color: #14a99b !important;
+    }
+
+</style>
+<script>
+    let labelDrop = document.getElementById('label--drop-down')
+    labelDrop.onclick = () => {
+        labelDrop.nextElementSibling.classList.toggle('status')
+    }
+</script>
+
