--- a/public/style.css
+++ b/public/style.css
@@ -328,3 +328,62 @@ form > .range-field {
         margin-top: 158%;
     }
 }
+
+.preload--none{
+    display: none !important;
+    position: absolute;
+    left: -3000px;
+}
+.logoMy {
+    width: 100%;
+    height: 100%;
+    margin-left: 20px;
+}
+
+.preload {
+    display: flex;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    background-color: #fafafa;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
+}
+
+.status {
+    display: none;
+}
+
+#drop--down {
+    position: absolute;
+    top: 0;
+    background: white;
+    width: 100%;
+    height: 477px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+#drop--down::-webkit-scrollbar {
+    display: none;
+}
+
+.city-region {
+    margin-left: 10px;
+}
+
+#label--drop-down {
+    width: 100%;
+    left: 32px;
+    top: 12px;
+    position: relative;
+}
+
+#drop--down:nth-child(0) {
+    margin-top: 20px;
+}
+
+.href--city {
+    color: #14a99b !important;
+}
