--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -34,5 +34,6 @@
 <script src="https://kit.fontawesome.com/402587631e.js" crossorigin="anonymous"></script>
 <script src="/script.js"></script>
 <script src="/ajax.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<script src="/jquery.fancybox.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
