--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,21 +1,7 @@
-<!--<ul id="dropdown1" class="dropdown-content drop">-->
-        <!--            {{#if city.length}}-->
-        <!--                {{#each city}}-->
-<!--            <li><a href="#!"><h5>{{name}}</h5></a></li>-->
-<!--            <li class="divider"></li>-->
-        <!--                    {{#each cities}}-->
-<!--                <li><a href="/escort/{{nameEn}}">{{name}}</a></li>-->
-<!--                <li class="divider"></li>-->
-        <!--                    {{/each}}-->
-        <!--                {{/each}}-->
-        <!--            {{else}}-->
-<!--        <p>Пусто</p>-->
-        <!--            {{/if}}-->
-<!--</ul>-->
 <nav>
     <div class="nav-wrapper purple">
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <a href="/escort" class="brand-logo logo">ZODIAK</a>
+        <a href="/escort" class="">ZODIAK</a>
         <ul class="right hide-on-med-and-down">
             <li><a href="/">Главная</a></li>
             <li><a href="/escort">Escort</a></li>
@@ -81,44 +67,12 @@
     <!--    <li><a class="dropdown-trigger" href="#!" data-target="dropdown12">Города<i class="material-icons right">arrow_drop_down</i></a></li>-->
         <!--    {{/if}}-->
 </ul>
-<style>
-    .status {
-        display: none;
-    }
+<!--<div class="preload--none" id="preload">-->
+<!--    &lt;!&ndash;    <svg>&ndash;&gt;-->
+<!--    &lt;!&ndash;        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="LOGO.svg#logo"></use>&ndash;&gt;-->
+<!--    &lt;!&ndash;    </svg>&ndash;&gt;-->
+<!--    <object id="logoMy" data="/images/LOGO.svg" type="image/svg+xml"></object>-->
 
-    #drop--down {
-        position: absolute;
-        top: 0;
-        background: white;
-        width: 100%;
-        height: 477px;
-        overflow-y: scroll;
-        overflow-x: hidden;
-    }
-    #drop--down::-webkit-scrollbar{
-        display: none;
-    }
-   .city-region{
-       margin-left: 10px;
-   }
-    #label--drop-down {
-        width: 100%;
-        left: 32px;
-        top: 12px;
-        position: relative;
-    }
-     #drop--down:nth-child(0){
-         margin-top: 20px;
-     }
-    .href--city {
-        color: #14a99b !important;
-    }
+<!--</div>-->
 
-</style>
-<script>
-    let labelDrop = document.getElementById('label--drop-down')
-    labelDrop.onclick = () => {
-        labelDrop.nextElementSibling.classList.toggle('status')
-    }
-</script>
 
