--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,7 +1,8 @@
+<img src="images/LOGO2.svg" alt="" class="log--3">
 <nav>
     <div class="nav-wrapper purple">
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <a href="/escort" class="">ZODIAK</a>
+<!--        <a href="/escort" class="">ZODIAK</a>-->
         <ul class="right hide-on-med-and-down">
             <li><a href="/">Главная</a></li>
             <li><a href="/escort">Escort</a></li>
@@ -39,6 +40,7 @@
                 <a href="#email"><span class="white-text email">{{user.email}}</span></a>
             {{else}}
                 <h6 class="nav--barText">ZODIAK</h6>
+
             {{/if}}
         </div>
     </li>
