--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -21,4 +21,10 @@
     <link rel="stylesheet" href="/jquery.fancybox.min.css">
     <meta name='description' content='{{meta}}' />
     <title>{{title}}</title>
+
 </head>
+<div>
+    <a href="/escort">
+    <img src="/images/LOGO2.svg" alt="" class="log--3">
+    </a>
+</div>
