--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -73,6 +73,7 @@
     @media screen and (min-width: 990px) {
         .log--3:not(.browser-default) {
             padding-left: 31% !important;
+            z-index: 5;
             list-style-type: none;
         }
     }
