--- a/public/style.css
+++ b/public/style.css
@@ -299,6 +299,7 @@ form > .range-field {
 .tabs .tab a:hover, .tabs .tab a.active {
     background-color: transparent;
     color: #8c26ad !important;
+    z-index: 5;
 }
 .tabs .tab a {
     color: #8c26ad;
@@ -361,7 +362,7 @@ form > .range-field {
     top: 0;
     background: white;
     width: 100%;
-    height: 477px;
+    height: 387px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -388,15 +389,18 @@ form > .range-field {
 .href--city {
     color: #14a99b !important;
 }
-.log--3{
+.log--4{
     position: fixed;
-    z-index: 5;
+    z-index: 1;
     right: -22px;
     width: 151px;
     top: -31px;
 }
 @media(min-width: 800px) {
-    .log--3{
+    .log--4{
         display: none;
     }
+}
+.row .col.s3 {
+    z-index: 4;
 }
