--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Compiled and minified CSS -->
-    <link rel="preload" href="/preload.js" as="script">
-    <script src="/preload.js"></script>
+<!--    <link rel="preload" href="/preload.js" as="script">-->
+    <script async type="module" src="/preload.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="/style.css">
 
