--- a/views/lk.hbs
+++ b/views/lk.hbs
@@ -59,7 +59,7 @@
             <div class="card">
                 <div class="card-image">
 
-                    <img class="img--lk es" src="https://zodaikapp.s3.us-east-2.amazonaws.com/{{photo.[0]}}">
+                    <img class="img--lk es" src="https://zodaikapp.s3.us-east-2.amazonaws.com/img/{{photo.[0]}}">
                     <span class="card-title title-lk">{{name}}</span>
                     <span class="card-title status title-lk" data-status="/active/{{id}}?active=" data-act="{{active}}"></span>
                 </div>
