--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="preload" href="/preload.js" as="script">
+    <link rel="preload" href="/preload.js" as="script" crossOrigin="anonymous">
     <script src="/jquery.min.js"></script>
     <script src="/anime.min.js"></script>
     <script async type="module" src="/preload.js"></script>
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/style.css">
 
     <link rel="stylesheet" href="/jquery.fancybox.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" crossOrigin="anonymous">
     <meta name='description' content='{{meta}}' />
     <title>{{title}}</title>
 
