--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,10 @@ body{
     filter: drop-shadow(1px 2px 3px black);
     font-size: xx-large;
 }
+.parallax > img{
+    max-width: 400px;
+    height: auto;
+}
 .block1{
     padding: 0 20px;
     margin-bottom: 35px;
