--- a/views/model.hbs
+++ b/views/model.hbs
@@ -1,5 +1,7 @@
 <div class="parallax-container">
-    <div class="parallax"><img src="https://zodaikapp.s3.us-east-2.amazonaws.com/img/{{object.photo.[0]}}"></div>
+    <div class="parallax">
+        <img src="https://zodaikapp.s3.us-east-2.amazonaws.com/img/{{object.photo.[0]}}">
+    </div>
     </br>
     <h1>{{object.name}}
         {{#if object.veryfication}}
