--- a/public/style.css
+++ b/public/style.css
@@ -36,7 +36,7 @@ body{
 .parallax > img{
     max-width: 400px;
     min-height: 600px;
-    object-fit: coverdr;
+    object-fit: cover;
 }
 .block1{
     padding: 0 20px;
@@ -367,7 +367,7 @@ form > .range-field {
     top: 0;
     background: white;
     width: 100%;
-    height: 470px;
+    height: 54%;
     overflow-y: scroll;
     overflow-x: hidden;
 }
