--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -5,12 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <link rel="preload" href="/preload.js" as="script">
-    <script async type="module" src="/preload.js"></script>
+\
+    <link rel="preload" href="/preload.js" as="script" crossOrigin="anonymous">
     <script src="/jquery.min.js"></script>
     <script src="/anime.min.js"></script>
-
+    <script async type="module" src="/preload.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="/style.css">
 
