--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -12,7 +12,7 @@
     <script async type="module" src="/preload.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="/style.css">
-
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="/jquery.fancybox.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" crossOrigin="anonymous">
     <meta name='description' content='{{meta}}' />
