--- a/views/escort.hbs
+++ b/views/escort.hbs
@@ -1,7 +1,7 @@
 <div class="parallax-container">
-    <div class="parallax">
+    <div class="parallax moadel">
         <img id="imgParallax" src="https://zodaikapp.s3.us-east-2.amazonaws.com/039f86b23af7.jpg">
-    </div><br>
+    </div>
     <h1>ESCORT</h1>
     <div class="fil-btn">
         <ul id="dropdown2" class="dropdown-content">
