--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -81,6 +81,7 @@
             </div>
         </div>
         <div id="block2" class="col s12">
+            <h6>Главное фото</h6>
             <div class="img--block--lk" id="photoBlock">
                 {{#if object.photo}}
                     {{#each object.photo}}
