--- a/views/model.hbs
+++ b/views/model.hbs
@@ -177,7 +177,7 @@
     <!--   ///////////////////////// Рекомендуемые////////////////////-->
 
     {{#if rcm.length}}
-        <h5 class="rcm">Рекомендуемые эскортницы</h5>
+        <h5 class="rcm">ZODIAK рекомендует</h5>
         <div class="contObj">
             {{#each rcm}}
                 <div class="card es objectInd hoverable">
