--- a/public/style.css
+++ b/public/style.css
@@ -301,6 +301,7 @@ form > .range-field {
     padding: 8px;
 }
 .block--photo > label{
+    padding: 3px;
     border-bottom: 1px solid rebeccapurple;
 }
 /*РЕДАКТИРОВАНИЕ*/
