--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -99,7 +99,7 @@
             <div class="file-field input-field">
                 <div class="btn">
 
-                    <label for="photo">File</label>
+                    <label for="photo">Добавить фото</label>
                     <input type="file" name="photo[]" multiple id="photo">
                 </div>
                 <div class="file-path-wrapper">
@@ -361,5 +361,4 @@
 </div>
 
 <script>
-
 </script>
